--- a/Inicio.html
+++ b/Inicio.html
@@ -13,13 +13,13 @@
 </head>
 <body style="background-image: url(./assets/img/Fondo\ de\ pagina.avif); width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover;">
     <header style="background-color: black; height: 70px;">
-        <img src="./assets/img/LogoHonkai.jpg" alt="Logo Honkai Star Rail" width="90px" height="100%">
+        <img src="./assets/img/LogoHonkai.png" alt="Logo Honkai Star Rail" width="90px" height="100%">
         <input type="button" value="Registrarse" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; float: right; color: yellow; background-color:black; border: 2px solid orange; border-radius: 3px; padding: 8px; margin: 1%;">
         <input type="button" value="Personajes" style="color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: right; margin: 1%; margin-right: 20%; padding: 8px;">
     </header>
     <div style="background-color: rgb(15, 12, 12); width: 40%; height: 90%; margin-top: 8%;margin-left: 30%; opacity: 90%;">
-        <img src="./assets/img/LogoHonkai.jpg" alt="Logo de Honkai" style="margin-left: 30%;"><br>
-        <h1 style="text-align: center; color: white; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Bienvenido a la WikiFV de Honkai: Star Rail</h1>
+        <img src="./assets/img/LogoHonkai.png" alt="Logo de Honkai" style="margin-left: 30%;"><br>
+        <h1 style="text-align: center; color: violet;">Bienvenido a la WikiFV de Honkai: Star Rail</h1>
 
         
     </div>
