--- a/Inicio.html
+++ b/Inicio.html
@@ -17,10 +17,12 @@
         <input type="button" value="Registrarse" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; float: right; color: yellow; background-color:black; border: 2px solid orange; border-radius: 3px; padding: 8px; margin: 1%;">
         <input type="button" value="Personajes" style="color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: right; margin: 1%; margin-right: 20%; padding: 8px;">
     </header>
-    <div style="background-color: rgb(15, 12, 12); width: 40%; margin-top: 8%;margin-left: 30%; opacity: 90%;">
-        <img src="./assets/img/LogoHonkai.png" alt="Logo de Honkai" style="margin-left: 30%;"><br>
+    <div style="background-color: rgb(15, 12, 12); width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%;">
+        <img src="./assets/img/LogoHonkaiCyrene.png" alt="Logo de Honkai" style="width: 50%; margin-left: 25%;"><br>
         <h1 style="text-align: center; color: violet;">Bienvenido a la WikiFV de Honkai: Star Rail</h1>
+        <table>
 
+        </table>
         
     </div>
 </body>
