--- a/Inicio.html
+++ b/Inicio.html
@@ -13,15 +13,27 @@
 </head>
 <body style="background-image: url(./assets/img/Fondo\ de\ pagina.avif); width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover;">
     <header style="background-color: black; height: 70px;">
-        <img src="./assets/img/LogoHonkai.png" alt="Logo Honkai Star Rail" width="90px" height="100%">
+        <img src="./assets/img/LogoHonkai.png" alt="Logo Honkai Star Rail" width="90px" height="100%" style="float: left;">
         <input type="button" value="Registrarse" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; float: right; color: yellow; background-color:black; border: 2px solid orange; border-radius: 3px; padding: 8px; margin: 1%;">
-        <input type="button" value="Personajes" style="color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: right; margin: 1%; margin-right: 20%; padding: 8px;">
+        <input type="button" value="Personajes" style="color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 10%; padding: 8px;">
     </header>
-    <div style="background-color: rgb(15, 12, 12); width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%;">
+    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%;">
         <img src="./assets/img/LogoHonkaiCyrene.png" alt="Logo de Honkai" style="width: 50%; margin-left: 25%;"><br>
         <h1 style="text-align: center; color: violet;">Bienvenido a la WikiFV de Honkai: Star Rail</h1>
-        <table>
-
+        <table style="width: 100%; text-align: center;">
+            <tr>
+                <th colspan="3" style="background-color: pink; border-radius:20px ; height: 50px;">Contenido</th>
+            </tr>
+            <tr>
+                <td><a href=""><img src="./assets/img/Cirene chibi.png" alt="Personajes" style="border: 2px solid green; width: 80%; height: 250px;"></a></td>
+                <td><a href=""><img src="./assets/img/Seele chibi.png" alt="Lore" style="border: 2px green solid; width: 80%; height: 250px;"></a></td>
+                <td><a href=""><img src="./assets/img/Castorice Chibi.png" alt="Merch" style="height: 250px; width: 80%; border: 2px solid green;"></a></td>
+            </tr>
+            <tr style="color: purple; font-size:x-large;">
+                <td><a href="">Personajes</a></td>
+                <td><a href="">Lore</a></td>
+                <td><a href="">Tienda</a></td>
+            </tr>
         </table>
         
     </div>
