--- a/Inicio.html
+++ b/Inicio.html
@@ -15,7 +15,9 @@
     <header style="background-color: black; height: 70px;">
         <img src="./assets/img/LogoHonkai.png" alt="Logo Honkai Star Rail" width="90px" height="100%" style="float: left;">
         <input type="button" value="Registrarse" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; float: right; color: yellow; background-color:black; border: 2px solid orange; border-radius: 3px; padding: 8px; margin: 1%;">
-        <input type="button" value="Personajes" style="color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 10%; padding: 8px;">
+        <input type="button" value="Personajes" style=" width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 5%; padding: 8px;">
+        <input type="button" value="Lore" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">
+        <input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">
     </header>
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%;">
         <img src="./assets/img/LogoHonkaiCyrene.png" alt="Logo de Honkai" style="width: 50%; margin-left: 25%;"><br>
