--- a/Inicio.html
+++ b/Inicio.html
@@ -27,9 +27,9 @@
                 <th colspan="3" style="background-color: pink; border-radius:20px ; height: 50px;">Contenido</th>
             </tr>
             <tr>
-                <td><a href="./Personajes.html"><img src="./assets/img/Cirene chibi.png" alt="Personajes" style="border: 2px solid green; width: 80%; height: 250px;"></a></td>
-                <td><a href="./Lore.html"><img src="./assets/img/Seele chibi.png" alt="Lore" style="border: 2px green solid; width: 80%; height: 250px;"></a></td>
-                <td><a href="./Tienda.html"><img src="./assets/img/Castorice Chibi.png" alt="Merch" style="height: 250px; width: 80%; border: 2px solid green;"></a></td>
+                <td><a href="./Personajes.html"><img src="./assets/img/Cirene chibi.png" alt="Personajes" style="width: 80%; height: 250px;"></a></td>
+                <td><a href="./Lore.html"><img src="./assets/img/Seele chibi.png" alt="Lore" style="width: 80%; height: 250px;"></a></td>
+                <td><a href="./Tienda.html"><img src="./assets/img/Castorice Chibi.png" alt="Merch" style="height: 250px; width: 80%;"></a></td>
             </tr>
             <tr>
                 <td><a href="./Personajes.html" style="color: purple; font-size: x-large">Personajes</a></td>
