Pagina de personajes

--- a/Inicio.html
+++ b/Inicio.html
@@ -14,8 +14,8 @@
 <body style="background-image: url(./assets/img/Fondo\ de\ pagina.avif); width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover;">
     <header style="background-color: black; height: 70px;">
         <img src="./assets/img/LogoHonkai.png" alt="Logo Honkai Star Rail" width="90px" height="100%" style="float: left;">
-        <input type="button" value="Registrarse" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; float: right; color: yellow; background-color:black; border: 2px solid orange; border-radius: 3px; padding: 8px; margin: 1%;">
-        <input type="button" value="Personajes" style=" width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 5%; padding: 8px;">
+        <a href="./Registro.html"><input type="button" value="Registrarse" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; float: right; color: yellow; background-color:black; border: 2px solid orange; border-radius: 3px; padding: 8px; margin: 1%;"></a>
+        <a href="./Personajes.html"><input type="button" value="Personajes" style=" width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 5%; padding: 8px;"></a>
         <input type="button" value="Lore" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">
         <input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">
     </header>
@@ -24,7 +24,7 @@
         <h1 style="text-align: center; color: violet;">Bienvenido a la WikiFV de Honkai: Star Rail</h1>
         <table style="width: 100%; text-align: center;">
             <tr>
-                <th colspan="3" style="background-color: pink; border-radius:20px ; height: 50px;">Contenido</th>
+                <th colspan="3" style="background-color: pink; border-radius:20px ; height: 50px; font-size: x-large;">Contenido</th>
             </tr>
             <tr>
                 <td><a href="./Personajes.html"><img src="./assets/img/Cirene chibi.png" alt="Personajes" style="width: 80%; height: 250px;"></a></td>
