--- a/Personajes.html
+++ b/Personajes.html
@@ -16,7 +16,7 @@
         <a href="./Inicio.html"><img src="./assets/img/LogoHonkai.png" alt="Logo Honkai Star Rail" width="90px" height="100%" style="float: left;"></a>
         <a href="./Registro.html"><input type="button" value="Registrarse" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; float: right; color: yellow; background-color:black; border: 2px solid orange; border-radius: 3px; padding: 8px; margin: 1%;"></a>
         <input type="button" value="Personajes" style=" width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 5%; padding: 8px;">
-        <input type="button" value="Lore" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">
+        <a href="./Lore.html"><input type="button" value="Lore" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;"></a>
         <input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">
     </header>
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%;">
