--- a/Registro.html
+++ b/Registro.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +16,7 @@
         <a href="./Inicio.html"><img src="./assets/img/LogoHonkai.png" alt="Logo Honkai Star Rail" width="90px" height="100%" style="float: left;"></a>
         <a href="./Personajes.html"><input type="button" value="Personajes" style=" width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 5%; padding: 8px;"></a>
         <a href="./Lore.html"><input type="button" value="Lore" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;"></a>
-        <input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">
+        <a href="./Tienda.html"><input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;"></a>
     </header>
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; text-align: center;">
         <img src="./assets/img/Chibi inicio de sesion.png" alt="Logo de Honkai" style="width: 30%;"><br>
