--- a/Personajes.html
+++ b/Personajes.html
@@ -26,13 +26,13 @@
             <!--Hayancine-->
             <!--Cyrene-->
             <tr>
-                <td><img src="./assets/img/CasChibiPersonajes.png" alt="--Castorice--" ></td>
+                <td><a href="./Personajes/Castorice.html"><img src="./assets/img/CasChibiPersonajes.png" alt="--Castorice--" ></a></td>
                 <td><img src="./assets/img/EverChibiPersonajes.png" alt="--Evernight--" ></td>
                 <td><img src="./assets/img/HayaChibiPersonajes.png" alt="--Hayancine--" ></td>
                 <td><img src="./assets/img/CyreChibiPersonajes.png" alt="--Cyrene--" ></td>
             </tr>
             <tr>
-                <td>Castorice</td>
+                <td><a href="./Personajes/Castorice.html" style="color: white; text-decoration: none;">Castorice</a></td>
                 <td>Evernight</td>
                 <td>Hayancine</td>
                 <td>Cyrene</td>
