--- a/Registro.html
+++ b/Registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse</title>
+    <title>Registrate</title>
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
     <meta name="author" content="Dario Valle">
