--- a/Personajes/Castorice.html
+++ b/Personajes/Castorice.html
@@ -22,13 +22,28 @@
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%;">
         <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange;">
             <tr>
-                <th style="background-color: purple;">Castorice</th>
+                <th style="background-color: purple;" colspan="2">Castorice</th>
             </tr>
             <tr>
-                <td><img src="../assets/img/SplashArtCas.png" alt=""></td>
+                <td colspan="2" style="color: burlywood;">Sierva de la muerte</td>
+            </tr>
+            <tr>
+                <td colspan="2"><img src="../assets/img/SplashArtCas.png" alt="Castorice"></td>
+            </tr>
+            <tr>
+                <td style="text-align: right; color: burlywood;">Rareza:</td>
+                <td>5 estrellas</td>
+            </tr>
+            <tr>
+                <td style="text-align: right; color: burlywood;">Tipo:</td>
+                <td>Cuántico</td>
+            </tr>
+            <tr>
+                <td style="text-align: right; color: burlywood;">Facción:</td>
+                <td>Reminiscencia</td> 
             </tr>
         </table>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam porro, velit inventore, adipisci magnam dolorum facere commodi ipsum culpa expedita ex dicta rerum ullam voluptates fuga delectus. Autem, at cumque?</p>
+        <p style="color: white;"><i>"Bienvenido a Okhema. Soy Castorice. Disculpa, es mi costumbre mantenerme a distancia de los demás... Sin embargo, puedo acercarme si lo deseas."</i></p>
     </div>
 </body>
 </html>
