--- a/Personajes/Castorice.html
+++ b/Personajes/Castorice.html
@@ -19,7 +19,7 @@
         <a href="../Lore.html"><input type="button" value="Lore" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;"></a>
         <a href="../Tienda.html"><input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;"></a>
     </header>
-    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%;">
+    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding: 1%;">
         <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange;">
             <tr>
                 <th style="background-color: purple;" colspan="2">Castorice</th>
@@ -43,7 +43,41 @@
                 <td>Reminiscencia</td> 
             </tr>
         </table>
-        <p style="color: white;"><i>"Bienvenido a Okhema. Soy Castorice. Disculpa, es mi costumbre mantenerme a distancia de los demás... Sin embargo, puedo acercarme si lo deseas."</i></p>
+        <p style="color: white; padding: 2%; border: 2px solid purple;"><i>"Bienvenido a Okhema. Soy Castorice. Disculpa, es mi costumbre mantenerme a distancia de los demás... Sin embargo, puedo acercarme si lo deseas."</i></p><br><br>
+        <span style="color: white;">
+            <p>La tierra que rinde homenaje a la muerte, Aidonia, donde la nieve cae sin cesar, hoy ha caído en un dulce sueño. Castorice, hija del Río de las Almas, Heredero de Chrysos en busca de "Muerte" Coreflame, se pone en marcha. Debes guardar el lamento de las almas y abrazar la soledad del destino.</p>
+            <p>— La vida y la muerte no son más que un viaje. Cuando la mariposa se posa en la rama, lo que se marchita florecerá de nuevo.</p>
+        </span>
+        <table border="1" style="border-collapse: collapse; border: solid 4px white; color: white;">
+            <tr style="border-bottom:solid 4px white ;">
+                <th>Contenido</th>
+            </tr>
+            <tr>
+                <td>
+                    <ol>
+                        <a href="#A" style="color: white; text-decoration: white;"><li>Ataque basico</li></a>
+                        <a href="#H" style="color: white; text-decoration: white;"><li>Habilidad</li></a>
+                        <a href="#U" style="color: white; text-decoration: white;"><li>Ultimate</li></a>
+                        <a href="#U" style="color: white; text-decoration: white;"><li>Pasiva</li></a>
+                    </ol>
+                </td>
+            </tr>
+        </table><br><br><br>
+        <span style="color: white;">
+            <h1 id="A">Ataque basico</h1>
+            <p>Lamento, Ondulación del Nethersea: Inflige DMG Cuántico igual al 50% de la HP Máx de Castorice a un enemigo designado.</p>
+            <video src=""></video>
+            <h1 id="H">Habilidad</h1>
+            <p>Silencio, Caricia de Wraithfly: Consume el 30% de los HP actuales de todos los aliados. Inflige DMG Cuántico igual al 38% de los HP Máximos de Castorice a un enemigo designado y DMG Cuántico igual al 22% de los HP Máximos de Castorice a los objetivos adyacentes. Si los HP actuales son insuficientes, esta habilidad reducirá los HP a 1. Si Netherwing está en el campo de batalla, esta habilidad se convierte en "Garra Ósea, Abrazo del Doomdrake" en su lugar.  
+    Garra Ósea, Abrazo del Doomdrake: Consume el 40% de los HP actuales de todos los aliados (excepto Netherwing). Castorice y Netherwing lanzan un ATAQUE Conjunto sobre el objetivo e infligen DMG Cuántico igual al 22.5% y 37.5% de los HP Máximos de Castorice a todos los enemigos. Si los HP actuales son insuficientes, usar la habilidad reducirá los HP a 1.</p>
+            <video src=""></video>
+            <h1 id="U">Ultimate</h1>
+            <p>Doomshriek, Campana del Amanecer: Invoca al memosprite Alas del Inframundo y avanza su acción en un 100%. Al mismo tiempo, crea el Territorio "País Perdido," que disminuye la RES de Todos los Tipos de todos los enemigos en un 15%. Si el efecto de Aumento de DMG del Talento de Castorice está activo, el efecto se extiende a Alas del Inframundo. Alas del Inframundo tiene una SPD inicial de 165 y un HP Máx establecido igual al 100% del máximo de "Nuevo Brote." Después de que Alas del Inframundo experimente 3 turnos o cuando su HP sea 0, desaparece y disipa el Territorio "País Perdido."</p>
+            <video src=""></video>
+            <h1 id="P">Pasiva</h1>
+            <p>Desolación a Través de las Palmas: Max "Newbud" se basa en los niveles de todos los personajes en el campo de batalla. Por cada punto de HP perdido por todos los aliados, Castorice gana 1 punto de "Newbud." Cuando "Newbud" alcanza su máximo, se puede usar la Ultimate de Castorice. Cuando los aliados pierden HP, el daño infligido por Castorice y Netherwing aumenta en un 15%. Este efecto puede acumularse hasta 3 veces, durando 3 turno(s). Cuando Netherwing está en el campo, "Newbud" no se puede ganar a través de Talento, y el HP perdido por todos los aliados (excepto Netherwing) se convertirá en una cantidad igual de HP para Netherwing.</p>
+            <video src=""></video>
+        </span>
     </div>
 </body>
 </html>
