--- a/Personajes.html
+++ b/Personajes.html
@@ -27,14 +27,14 @@
             <!--Cyrene-->
             <tr>
                 <td><a href="./Personajes/Castorice.html"><img src="./assets/img/CasChibiPersonajes.png" alt="--Castorice--" ></a></td>
-                <td><img src="./assets/img/EverChibiPersonajes.png" alt="--Evernight--" ></td>
-                <td><img src="./assets/img/HayaChibiPersonajes.png" alt="--Hayancine--" ></td>
+                <td><a href="./Personajes/Evernight.html"><img src="./assets/img/EverChibiPersonajes.png" alt="--Evernight--" ></a></td>
+                <td><a href="./Personajes/Hyacyne.html"><img src="./assets/img/HayaChibiPersonajes.png" alt="--Hyancine--" ></a></td>
                 <td><img src="./assets/img/CyreChibiPersonajes.png" alt="--Cyrene--" ></td>
             </tr>
             <tr>
                 <td><a href="./Personajes/Castorice.html" style="color: white; text-decoration: none;">Castorice</a></td>
-                <td>Evernight</td>
-                <td>Hayancine</td>
+                <td><a href="./Personajes/Evernight.html" style="color: white; text-decoration: none;">Evernight</a></td>
+                <td><a href="./Personajes/Hyacyne.html" style="color: white; text-decoration: none;">Hyancine</a></td>
                 <td>Cyrene</td>
             </tr>
             <!--Seele-->
