--- a/Personajes/Evernight.html
+++ b/Personajes/Evernight.html
@@ -43,7 +43,7 @@
                 <td>Reminiscencia</td> 
             </tr>
         </table>
-        <p style="color: white; padding: 2%; border: 2px solid purple;"><i>"El tercer mes de Amphoreus es el mes reservado para el Velo de la Noche Eterna... Entonces llamemos a esta encarnación — la sombra de ella — 'Noche Eterna'."</i></p><br><br>
+        <p style="color: white; padding: 2%; border: 2px solid red;"><i>"El tercer mes de Amphoreus es el mes reservado para el Velo de la Noche Eterna... Entonces llamemos a esta encarnación — la sombra de ella — 'Noche Eterna'."</i></p><br><br>
         <span style="color: white;">
             <p>En la aislada Zona de Memoria, la luz de las velas proyecta ecos del pasado, desvaneciéndose suavemente en la niebla.</p>
             <p>Noche eterna, hijo de la Recuerdo nacido de la sombra, Heredero de Chrysos que oculta la Llama Central del Tiempo, agitarás la marea del Olvido, guardando el deseo del alma reflejada.</p>
