--- a/Personajes/Hyacyne.html
+++ b/Personajes/Hyacyne.html
@@ -20,15 +20,15 @@
         <a href="../Tienda.html"><input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;"></a>
     </header>
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding: 1%;">
-        <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange;">
+        <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange; width: 20%;">
             <tr>
                 <th style="background-color: greenyellow;" colspan="2">Hyacine</th>
             </tr>
             <tr>
-                <td colspan="2" style="color: burlywood;">Sierva de la muerte</td>
+                <td colspan="2" style="color: burlywood;">Sanadora de Luz</td>
             </tr>
             <tr>
-                <td colspan="2"><img src="../assets/img/SplashArtHya.png" alt="Hyacine"></td>
+                <td colspan="2"><img src="../assets/img/SplashArtHya.png" alt="Hyacine" style="width: 100%;"></td>
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Rareza:</td>
@@ -36,17 +36,17 @@
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Tipo:</td>
-                <td>Cuántico</td>
+                <td>Viento</td>
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Facción:</td>
                 <td>Reminiscencia</td> 
             </tr>
         </table>
-        <p style="color: white; padding: 2%; border: 2px solid purple;"><i>"Bienvenido a Okhema. Soy Castorice. Disculpa, es mi costumbre mantenerme a distancia de los demás... Sin embargo, puedo acercarme si lo deseas."</i></p><br><br>
+        <p style="color: white; padding: 2%; border: 2px solid greenyellow;"><i>"Como descendiente del Cielo, yo, Hyacinthia, cumpliré con el deber de la Persecución de la Llama con todos ustedes. Al mismo tiempo, haré todo lo posible para ayudar a todos como Hyacine, sanadora del Patio del Crepúsculo. Este es mi buen amigo y asistente, el pequeño pegaso Ika [sic]. ¿Quieres acariciarlos? ¡Por favor, adelante! Les encanta que los acaricien~"</i></p><br><br>
         <span style="color: white;">
-            <p>La tierra que rinde homenaje a la muerte, Aidonia, donde la nieve cae sin cesar, hoy ha caído en un dulce sueño. Castorice, hija del Río de las Almas, Heredero de Chrysos en busca de "Muerte" Coreflame, se pone en marcha. Debes guardar el lamento de las almas y abrazar la soledad del destino.</p>
-            <p>— La vida y la muerte no son más que un viaje. Cuando la mariposa se posa en la rama, lo que se marchita florecerá de nuevo.</p>
+            <p>A medida que la ciudad-estado en las nubes se desmorona con el tiempo, el Patio del Crepúsculo abre sus puertas una vez más, trayendo un destello de luz a la Noche Eterna. Tú, Doctora Híacintia, Heredera de Chrysos que guarda la Llama del Núcleo Celestial, debes heredar la voluntad de tus ancestros y reparar el tejido desgarrado del crepúsculo y el amanecer.</p>
+            <p>Que la luz del arcoíris descienda, disuelva todos los rencores y traiga el amanecer de vuelta a esta tierra</p>
         </span>
         <table border="1" style="border-collapse: collapse; border: solid 4px white; color: white;">
             <tr style="border-bottom:solid 4px white ;">
@@ -65,17 +65,16 @@
         </table><br><br><br>
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
-            <p>Lamento, Ondulación del Nethersea: Inflige DMG Cuántico igual al 50% de la HP Máx de Castorice a un enemigo designado.</p>
+            <p>Cuando la Brisa Beso al Cirro: Inflige DMG de Viento igual al 50% de la HP Máx de Hyacine a un objetivo enemigo designado.</p>
             <video src=""></video>
             <h1 id="H">Habilidad</h1>
-            <p>Silencio, Caricia de Wraithfly: Consume el 30% de los HP actuales de todos los aliados. Inflige DMG Cuántico igual al 38% de los HP Máximos de Castorice a un enemigo designado y DMG Cuántico igual al 22% de los HP Máximos de Castorice a los objetivos adyacentes. Si los HP actuales son insuficientes, esta habilidad reducirá los HP a 1. Si Netherwing está en el campo de batalla, esta habilidad se convierte en "Garra Ósea, Abrazo del Doomdrake" en su lugar.  
-    Garra Ósea, Abrazo del Doomdrake: Consume el 40% de los HP actuales de todos los aliados (excepto Netherwing). Castorice y Netherwing lanzan un ATAQUE Conjunto sobre el objetivo e infligen DMG Cuántico igual al 22.5% y 37.5% de los HP Máximos de Castorice a todos los enemigos. Si los HP actuales son insuficientes, usar la habilidad reducirá los HP a 1.</p>
+            <p>Amor sobre el arcoíris: Invoca a memosprite Pequeña Ica, restaura HP igual al 6.4% del HP máximo de Hyacine más 124 para todos los aliados excepto Pequeña Ica, y restaura HP igual al 8.0% del HP máximo de Hyacine más 155 para Pequeña Ica.</p>
             <video src=""></video>
             <h1 id="U">Ultimate</h1>
-            <p>Doomshriek, Campana del Amanecer: Invoca al memosprite Alas del Inframundo y avanza su acción en un 100%. Al mismo tiempo, crea el Territorio "País Perdido," que disminuye la RES de Todos los Tipos de todos los enemigos en un 15%. Si el efecto de Aumento de DMG del Talento de Castorice está activo, el efecto se extiende a Alas del Inframundo. Alas del Inframundo tiene una SPD inicial de 165 y un HP Máx establecido igual al 100% del máximo de "Nuevo Brote." Después de que Alas del Inframundo experimente 3 turnos o cuando su HP sea 0, desaparece y disipa el Territorio "País Perdido."</p>
+            <p>Nosotros que volamos hacia el crepúsculo: Convoca a memosprite Pequeña Ica, restaura HP igual al 8.0% del HP máximo de Hyacine más 155 para todos los aliados excepto Pequeña Ica, y restaura HP igual al 9.6% del HP máximo de Hyacine más 186 para Pequeña Ica. Hyacine entra en el estado "Después de la Lluvia" durante 3 turno(s) después. Reduce la duración del estado en 1 turno cada vez que comienza el turno de Hyacine. Cuando está en estado "Después de la Lluvia", aumenta el HP máximo para todos los aliados en un 22.5% + 465.</p>
             <video src=""></video>
             <h1 id="P">Pasiva</h1>
-            <p>Desolación a Través de las Palmas: Max "Newbud" se basa en los niveles de todos los personajes en el campo de batalla. Por cada punto de HP perdido por todos los aliados, Castorice gana 1 punto de "Newbud." Cuando "Newbud" alcanza su máximo, se puede usar la Ultimate de Castorice. Cuando los aliados pierden HP, el daño infligido por Castorice y Netherwing aumenta en un 15%. Este efecto puede acumularse hasta 3 veces, durando 3 turno(s). Cuando Netherwing está en el campo, "Newbud" no se puede ganar a través de Talento, y el HP perdido por todos los aliados (excepto Netherwing) se convertirá en una cantidad igual de HP para Netherwing.</p>
+            <p>La Primera Luz Sana el Mundo: el memosprite Pequeña Ica tiene inicialmente HP máximo igual al 50% del HP máximo de Hyacine. Cuando Hyacine o Pequeña Ica proporcionan curación, aumenta el daño infligido por Pequeña Ica en un 60% durante 2 turno(s). Se acumula hasta 3 vez(es).</p>
             <video src=""></video>
         </span>
     </div>
