--- a/Personajes.html
+++ b/Personajes.html
@@ -29,13 +29,13 @@
                 <td><a href="./Personajes/Castorice.html"><img src="./assets/img/CasChibiPersonajes.png" alt="--Castorice--" ></a></td>
                 <td><a href="./Personajes/Evernight.html"><img src="./assets/img/EverChibiPersonajes.png" alt="--Evernight--" ></a></td>
                 <td><a href="./Personajes/Hyacyne.html"><img src="./assets/img/HayaChibiPersonajes.png" alt="--Hyancine--" ></a></td>
-                <td><img src="./assets/img/CyreChibiPersonajes.png" alt="--Cyrene--" ></td>
+                <td><a href="./Personajes/Cyrene.html"><img src="./assets/img/CyreChibiPersonajes.png" alt="--Cyrene--" ></a></td>
             </tr>
             <tr>
                 <td><a href="./Personajes/Castorice.html" style="color: white; text-decoration: none;">Castorice</a></td>
                 <td><a href="./Personajes/Evernight.html" style="color: white; text-decoration: none;">Evernight</a></td>
                 <td><a href="./Personajes/Hyacyne.html" style="color: white; text-decoration: none;">Hyancine</a></td>
-                <td>Cyrene</td>
+                <td><a href="./Personajes/Cyrene.html" style="color: white; text-decoration: none;">Cyrene</a></td>
             </tr>
             <!--Seele-->
             <!--Dan Heng - Imbibitor Lunae-->
