--- a/Personajes/Castorice.html
+++ b/Personajes/Castorice.html
@@ -43,7 +43,7 @@
                 <td>Reminiscencia</td> 
             </tr>
         </table>
-        <p style="color: white; padding: 2%; border: 2px solid purple;"><i>"Bienvenido a Okhema. Soy Castorice. Disculpa, es mi costumbre mantenerme a distancia de los demás... Sin embargo, puedo acercarme si lo deseas."</i></p><br><br>
+        <p style="color: white; padding: 2%; border: 2px solid purple; width: 70%;"><i>"Bienvenido a Okhema. Soy Castorice. Disculpa, es mi costumbre mantenerme a distancia de los demás... Sin embargo, puedo acercarme si lo deseas."</i></p><br><br>
         <span style="color: white;">
             <p>La tierra que rinde homenaje a la muerte, Aidonia, donde la nieve cae sin cesar, hoy ha caído en un dulce sueño. Castorice, hija del Río de las Almas, Heredero de Chrysos en busca de "Muerte" Coreflame, se pone en marcha. Debes guardar el lamento de las almas y abrazar la soledad del destino.</p>
             <p>— La vida y la muerte no son más que un viaje. Cuando la mariposa se posa en la rama, lo que se marchita florecerá de nuevo.</p>
