--- a/Personajes/Hyacyne.html
+++ b/Personajes/Hyacyne.html
@@ -43,7 +43,7 @@
                 <td>Reminiscencia</td> 
             </tr>
         </table>
-        <p style="color: white; padding: 2%; border: 2px solid greenyellow;"><i>"Como descendiente del Cielo, yo, Hyacinthia, cumpliré con el deber de la Persecución de la Llama con todos ustedes. Al mismo tiempo, haré todo lo posible para ayudar a todos como Hyacine, sanadora del Patio del Crepúsculo. Este es mi buen amigo y asistente, el pequeño pegaso Ika [sic]. ¿Quieres acariciarlos? ¡Por favor, adelante! Les encanta que los acaricien~"</i></p><br><br>
+        <p style="color: white; padding: 2%; border: 2px solid greenyellow; width: 70%;"><i>"Como descendiente del Cielo, yo, Hyacinthia, cumpliré con el deber de la Persecución de la Llama con todos ustedes. Al mismo tiempo, haré todo lo posible para ayudar a todos como Hyacine, sanadora del Patio del Crepúsculo. Este es mi buen amigo y asistente, el pequeño pegaso Ika [sic]. ¿Quieres acariciarlos? ¡Por favor, adelante! Les encanta que los acaricien~"</i></p><br><br>
         <span style="color: white;">
             <p>A medida que la ciudad-estado en las nubes se desmorona con el tiempo, el Patio del Crepúsculo abre sus puertas una vez más, trayendo un destello de luz a la Noche Eterna. Tú, Doctora Híacintia, Heredera de Chrysos que guarda la Llama del Núcleo Celestial, debes heredar la voluntad de tus ancestros y reparar el tejido desgarrado del crepúsculo y el amanecer.</p>
             <p>Que la luz del arcoíris descienda, disuelva todos los rencores y traiga el amanecer de vuelta a esta tierra</p>
