--- a/Personajes/Cyrene.html
+++ b/Personajes/Cyrene.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evernight</title>
+    <title>Castorice</title>
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
     <meta name="author" content="Dario Valle">
@@ -22,13 +22,13 @@
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding: 1%;">
         <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange; width: 20%;">
             <tr>
-                <th style="background-color: red;" colspan="2">Evernight</th>
+                <th style="background-color: pink;" colspan="2">Cyrene</th>
             </tr>
             <tr>
-                <td colspan="2" style="color: burlywood;">Inquilina Extranjera Misteriosa</td>
+                <td colspan="2" style="color: burlywood;">Ondas de la Reverie Pasada</td>
             </tr>
             <tr>
-                <td colspan="2"><img src="../assets/img/SplashArtEver.png" alt="Evernight" style="width: 100%;"></td>
+                <td colspan="2"><img src="../assets/img/SplashArtCyre.png" alt="Cyrene" style="width: 100%;"></td>
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Rareza:</td>
@@ -43,11 +43,10 @@
                 <td>Reminiscencia</td> 
             </tr>
         </table>
-        <p style="color: white; padding: 2%; border: 2px solid red; width: 70%;"><i>"El tercer mes de Amphoreus es el mes reservado para el Velo de la Noche Eterna... Entonces llamemos a esta encarnación — la sombra de ella — 'Noche Eterna'."</i></p><br><br>
+        <p style="color: white; padding: 2%; border: 2px solid pink; width: 70%;"><i>"¿Es esta una reunión ordenada por el destino, o... un reencuentro largamente esperado? Me está acelerando el corazón. Entonces... por favor, llámame una vez más 'Cyrene', como cuando nos conocimos por primera vez, ¿de acuerdo?"</i></p><br><br>
         <span style="color: white;">
-            <p>En la aislada Zona de Memoria, la luz de las velas proyecta ecos del pasado, desvaneciéndose suavemente en la niebla.</p>
-            <p>Noche eterna, hijo de la Recuerdo nacido de la sombra, Heredero de Chrysos que oculta la Llama Central del Tiempo, agitarás la marea del Olvido, guardando el deseo del alma reflejada.</p>
-            <p>— "No te preocupes, vigilaré tu camino de Trailblaze... sin importar el costo"</p>
+            <p>Un meteoro atraviesa el cielo nocturno, enviando ondas a través del río de la vida, brillando en trece matices.</p>
+            <p>— La vida y la muerte no son más que un viaje. Cuando la mariposa se posa en la rama, lo que se marchita florecerá de nuevo.</p>
         </span>
         <table border="1" style="border-collapse: collapse; border: solid 4px white; color: white;">
             <tr style="border-bottom:solid 4px white ;">
@@ -66,16 +65,17 @@
         </table><br><br><br>
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
-            <p>El Tiempo se Difumina: Inflige daño de hielo equivalente al 25% de la HP máxima de Evernight a un enemigo designado.</p>
+            <p>Lamento, Ondulación del Nethersea: Inflige DMG Cuántico igual al 50% de la HP Máx de Castorice a un enemigo designado.</p>
             <video src=""></video>
             <h1 id="H">Habilidad</h1>
-            <p>Día se deslizas suavemente: Consume el 10% de los HP actuales de Evernight para invocar a la memosprite Evey y aumenta el DMG CRIT de todas las memosprites aliadas en una cantidad igual al 12% del DMG CRIT de Evernight durante 2 turno(s). La duración disminuye en 1 al comienzo de cada uno de los turnos de Evernight. Si Evey ya está en el campo, restaura el 50% de su HP máximo. Al usarse, gana 2 "Memoria." Si está en el estado de "Adivinanza más oscura", gana 12 "Memoria" adicionales.</p>
+            <p>Silencio, Caricia de Wraithfly: Consume el 30% de los HP actuales de todos los aliados. Inflige DMG Cuántico igual al 38% de los HP Máximos de Castorice a un enemigo designado y DMG Cuántico igual al 22% de los HP Máximos de Castorice a los objetivos adyacentes. Si los HP actuales son insuficientes, esta habilidad reducirá los HP a 1. Si Netherwing está en el campo de batalla, esta habilidad se convierte en "Garra Ósea, Abrazo del Doomdrake" en su lugar.  
+    Garra Ósea, Abrazo del Doomdrake: Consume el 40% de los HP actuales de todos los aliados (excepto Netherwing). Castorice y Netherwing lanzan un ATAQUE Conjunto sobre el objetivo e infligen DMG Cuántico igual al 22.5% y 37.5% de los HP Máximos de Castorice a todos los enemigos. Si los HP actuales son insuficientes, usar la habilidad reducirá los HP a 1.</p>
             <video src=""></video>
             <h1 id="U">Ultimate</h1>
-            <p>Oh Mundo Despierto, Buenas Noches: Invoca al memosprite Evey, luego el memosprite Evey inflige DMG de Hielo igual al 100% de la HP Máx de Evey a todos los enemigos, y hace que Evernight entre en el estado de "Enigma Más Oscuro". Durante este estado, el DMG recibido por todos los enemigos aumenta en un 15%, el DMG infligido por Evernight y el memosprite Evey aumenta en un 30%, y tanto Evernight como el memosprite Evey son inmunes a los debuffs de Control de Multitudes. Gana 2 Carga(s) de "Enigma Más Oscuro". El memosprite Evey consume 1 Carga después de usar "Sueño, Disolviéndose, como Rocío". Al inicio del turno de Evernight, si no quedan Cargas, sale del estado de "Enigma Más Oscuro".</p>
+            <p>Doomshriek, Campana del Amanecer: Invoca al memosprite Alas del Inframundo y avanza su acción en un 100%. Al mismo tiempo, crea el Territorio "País Perdido," que disminuye la RES de Todos los Tipos de todos los enemigos en un 15%. Si el efecto de Aumento de DMG del Talento de Castorice está activo, el efecto se extiende a Alas del Inframundo. Alas del Inframundo tiene una SPD inicial de 165 y un HP Máx establecido igual al 100% del máximo de "Nuevo Brote." Después de que Alas del Inframundo experimente 3 turnos o cuando su HP sea 0, desaparece y disipa el Territorio "País Perdido."</p>
             <video src=""></video>
             <h1 id="P">Pasiva</h1>
-            <p>CONMIGO, ESTA NOCHE: Al entrar en combate, invoca a la memosprite Evey. La memosprite Evey tiene 160 de SPD por defecto, y su HP máximo es el 50% del HP máximo de Evernight. Cada vez que Evernight o la memosprite Evey pierden HP, aumenta el DMG CRIT para esta unidad y la memosprite Evey en un 30% durante 2 turno(s), y gana 2 "Memoria." Este efecto solo puede activarse una vez por objetivo por ataque. Cuando Evernight tiene 16 o más "Memoria," se disipa y se vuelve inmune a los debuffs de Control de Multitudes. Si la memosprite Evey está en el campo, toma acción de inmediato. El efecto de acción inmediata solo puede activarse nuevamente después de que la memosprite Evey use "Sueño, Disolviéndose, como Rocío."</p>
+            <p>Desolación a Través de las Palmas: Max "Newbud" se basa en los niveles de todos los personajes en el campo de batalla. Por cada punto de HP perdido por todos los aliados, Castorice gana 1 punto de "Newbud." Cuando "Newbud" alcanza su máximo, se puede usar la Ultimate de Castorice. Cuando los aliados pierden HP, el daño infligido por Castorice y Netherwing aumenta en un 15%. Este efecto puede acumularse hasta 3 veces, durando 3 turno(s). Cuando Netherwing está en el campo, "Newbud" no se puede ganar a través de Talento, y el HP perdido por todos los aliados (excepto Netherwing) se convertirá en una cantidad igual de HP para Netherwing.</p>
             <video src=""></video>
         </span>
     </div>
