--- a/Personajes/Cyrene.html
+++ b/Personajes/Cyrene.html
@@ -46,7 +46,7 @@
         <p style="color: white; padding: 2%; border: 2px solid pink; width: 70%;"><i>"¿Es esta una reunión ordenada por el destino, o... un reencuentro largamente esperado? Me está acelerando el corazón. Entonces... por favor, llámame una vez más 'Cyrene', como cuando nos conocimos por primera vez, ¿de acuerdo?"</i></p><br><br>
         <span style="color: white;">
             <p>Un meteoro atraviesa el cielo nocturno, enviando ondas a través del río de la vida, brillando en trece matices.</p>
-            <p>— La vida y la muerte no son más que un viaje. Cuando la mariposa se posa en la rama, lo que se marchita florecerá de nuevo.</p>
+            <p>Hija de Aedes Elysiae, Chrysos Heredero que nutre "██," siembra la Semilla de la Memoria, para que las flores del pasado puedan florecer en el mañana. — "Y juntos, escribiremos un verso como ningún otro antes".</p>
         </span>
         <table border="1" style="border-collapse: collapse; border: solid 4px white; color: white;">
             <tr style="border-bottom:solid 4px white ;">
@@ -65,17 +65,18 @@
         </table><br><br><br>
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
-            <p>Lamento, Ondulación del Nethersea: Inflige DMG Cuántico igual al 50% de la HP Máx de Castorice a un enemigo designado.</p>
+            <p>¡Mira, la esperanza alza el vuelo!: Gana 1 punto(s) de "Recuerdo" e inflige Daño de Hielo igual al 25% de la Vida Máxima de Cyrene a un objetivo enemigo designado.</p>
+            <p>To Love and Tomorrow: Obtiene 3 puntos de "Recuerdo" e inflige Daño de Hielo igual al 15% de la Vida Máxima de Cyrene a un enemigo designado, luego inflige Daño de Hielo igual al 15% de la Vida Máxima de Cyrene a todos los enemigos. "To Love and Tomorrow ♪" no puede recuperar Puntos de Habilidad.</p>
             <video src=""></video>
             <h1 id="H">Habilidad</h1>
-            <p>Silencio, Caricia de Wraithfly: Consume el 30% de los HP actuales de todos los aliados. Inflige DMG Cuántico igual al 38% de los HP Máximos de Castorice a un enemigo designado y DMG Cuántico igual al 22% de los HP Máximos de Castorice a los objetivos adyacentes. Si los HP actuales son insuficientes, esta habilidad reducirá los HP a 1. Si Netherwing está en el campo de batalla, esta habilidad se convierte en "Garra Ósea, Abrazo del Doomdrake" en su lugar.  
-    Garra Ósea, Abrazo del Doomdrake: Consume el 40% de los HP actuales de todos los aliados (excepto Netherwing). Castorice y Netherwing lanzan un ATAQUE Conjunto sobre el objetivo e infligen DMG Cuántico igual al 22.5% y 37.5% de los HP Máximos de Castorice a todos los enemigos. Si los HP actuales son insuficientes, usar la habilidad reducirá los HP a 1.</p>
+            <p>Bloom, Elysium del Más Allá: Gana 3 punto(s) de "Recuerdo" y despliega una Zona que dura 2 turnos, con la duración de la Zona disminuyendo en 1 al comienzo del turno de Cyrene. Mientras la Zona está activa, por cada instancia de DAÑO infligido por todos los objetivos aliados, inflige 1 instancia adicional de DAÑO Verdadero igual al 12% del DAÑO original. Cuando Cyrene cae, la Zona también se disipará.</p>
             <video src=""></video>
             <h1 id="U">Ultimate</h1>
-            <p>Doomshriek, Campana del Amanecer: Invoca al memosprite Alas del Inframundo y avanza su acción en un 100%. Al mismo tiempo, crea el Territorio "País Perdido," que disminuye la RES de Todos los Tipos de todos los enemigos en un 15%. Si el efecto de Aumento de DMG del Talento de Castorice está activo, el efecto se extiende a Alas del Inframundo. Alas del Inframundo tiene una SPD inicial de 165 y un HP Máx establecido igual al 100% del máximo de "Nuevo Brote." Después de que Alas del Inframundo experimente 3 turnos o cuando su HP sea 0, desaparece y disipa el Territorio "País Perdido."</p>
+            <p>Verse Vow ∞:Invoca a Memosprite Demiurge, lo que provoca que gane inmediatamente 1 turno extra y activa el Ultimate de todos los compañeros de equipo. Luego, entra en el estado "Ondas de la Reverie Pasada", con el ATQ Básico mejorado a "Para Amar y Mañana ♪" y solo puede usar este ATQ Básico. Aumenta la Tasa CRIT de Cyrene y Demiurge en un 25% y despliega el efecto de Zona de la Habilidad sin límite de duración. Solo se puede usar una vez por batalla. El HP Máximo inicial de Demiurge es igual al 100% del HP Máximo de Cyrene.</p>
+            <p>Reunión a Primera Vista: Hace que el Demiurgo gane inmediatamente 1 turno extra.</p>
             <video src=""></video>
             <h1 id="P">Pasiva</h1>
-            <p>Desolación a Través de las Palmas: Max "Newbud" se basa en los niveles de todos los personajes en el campo de batalla. Por cada punto de HP perdido por todos los aliados, Castorice gana 1 punto de "Newbud." Cuando "Newbud" alcanza su máximo, se puede usar la Ultimate de Castorice. Cuando los aliados pierden HP, el daño infligido por Castorice y Netherwing aumenta en un 15%. Este efecto puede acumularse hasta 3 veces, durando 3 turno(s). Cuando Netherwing está en el campo, "Newbud" no se puede ganar a través de Talento, y el HP perdido por todos los aliados (excepto Netherwing) se convertirá en una cantidad igual de HP para Netherwing.</p>
+            <p>Corazones Unidos: Cuando el combate comienza o después de que Cyrene actúa, otros personajes aliados bajo cualquier estado y sus memosprites ganan "Futuro". Cuando los aliados con "Futuro" actúan, consumen "Futuro" para otorgar a Cyrene 1 punto(s) de "Recuerdo". Cuando Cyrene tiene 24 puntos de "Recuerdo", puede activar su Ultimate y disipar todos los debuffs sobre ella. Cuando tiene 12 puntos de "Recuerdo" durante el estado "Ondas de la Reverie del Pasado", puede activar su Ultimate. Después de alcanzar el máximo, los puntos de "Recuerdo" pueden desbordarse hasta 27 puntos. Mientras Cyrene está en el campo, aumenta el daño infligido por todos los aliados en un 10.0%.</p>
             <video src=""></video>
         </span>
     </div>
