--- a/Personajes/Seele.html
+++ b/Personajes/Seele.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Castorice</title>
+    <title>Seele</title>
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
     <meta name="author" content="Dario Valle">
@@ -20,15 +20,15 @@
         <a href="../Tienda.html"><input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;"></a>
     </header>
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding: 1%;">
-        <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange; width: 20%;">
+        <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange; width: 25%;">
             <tr>
-                <th style="background-color: pink;" colspan="2">Cyrene</th>
+                <th style="background-color: blue;" colspan="2">Seele</th>
             </tr>
             <tr>
-                <td colspan="2" style="color: burlywood;">Ondas de la Reverie Pasada</td>
+                <td colspan="2" style="color: burlywood;">Mariposa de la Tempestad</td>
             </tr>
             <tr>
-                <td colspan="2"><img src="../assets/img/SplashArtCyre.png" alt="Cyrene" style="width: 100%;"></td>
+                <td colspan="2"><img src="../assets/img/SplashArtSeele.png" alt="Castorice" style="width: 100%;"></td>
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Rareza:</td>
@@ -36,17 +36,16 @@
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Tipo:</td>
-                <td>Hielo</td>
+                <td>Cuántico</td>
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Facción:</td>
-                <td>Reminiscencia</td> 
+                <td>Cacería</td> 
             </tr>
         </table>
-        <p style="color: white; padding: 2%; border: 2px solid pink; width: 70%;"><i>"¿Es esta una reunión ordenada por el destino, o... un reencuentro largamente esperado? Me está acelerando el corazón. Entonces... por favor, llámame una vez más 'Cyrene', como cuando nos conocimos por primera vez, ¿de acuerdo?"</i></p><br><br>
+        <p style="color: white; padding: 2%; border: 2px solid blue; width: 60%;"><i>"Usar nuestra fuerza para crear una sociedad justa... ¿No es ese el objetivo obvio?"</i></p><br><br>
         <span style="color: white;">
-            <p>Un meteoro atraviesa el cielo nocturno, enviando ondas a través del río de la vida, brillando en trece matices.</p>
-            <p>Hija de Aedes Elysiae, Chrysos Heredero que nutre "██," siembra la Semilla de la Memoria, para que las flores del pasado puedan florecer en el mañana. — "Y juntos, escribiremos un verso como ningún otro antes".</p>
+            <p>Una valiente y enérgica miembro clave de Wildfire que creció en el peligroso Inframundo de Belobog. Está acostumbrada a valerse por sí misma. Como su apodo "Babochka" (en ruso: Бабочка Babochka, "Mariposa"), revolotea por el campo de batalla con gracia mientras causa una tormenta.</p>
         </span>
         <table border="1" style="border-collapse: collapse; border: solid 4px white; color: white;">
             <tr style="border-bottom:solid 4px white ;">
@@ -65,18 +64,16 @@
         </table><br><br><br>
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
-            <p><b>¡Mira, la esperanza alza el vuelo!:</b> Gana 1 punto(s) de "Recuerdo" e inflige Daño de Hielo igual al 25% de la Vida Máxima de Cyrene a un objetivo enemigo designado.</p>
-            <p>To Love and Tomorrow: Obtiene 3 puntos de "Recuerdo" e inflige Daño de Hielo igual al 15% de la Vida Máxima de Cyrene a un enemigo designado, luego inflige Daño de Hielo igual al 15% de la Vida Máxima de Cyrene a todos los enemigos. "To Love and Tomorrow ♪" no puede recuperar Puntos de Habilidad.</p>
+            <p><b>Golpe:</b> Inflige daño cuántico igual al 100% del ATK de Seele a un solo enemigo.</p>
             <video src=""></video>
             <h1 id="H">Habilidad</h1>
-            <p><b>Bloom, Elysium del Más Allá:</b> Gana 3 punto(s) de "Recuerdo" y despliega una Zona que dura 2 turnos, con la duración de la Zona disminuyendo en 1 al comienzo del turno de Cyrene. Mientras la Zona está activa, por cada instancia de DAÑO infligido por todos los objetivos aliados, inflige 1 instancia adicional de DAÑO Verdadero igual al 12% del DAÑO original. Cuando Cyrene cae, la Zona también se disipará.</p>
+            <p><b>Espada Enfundada:</b> Inflige daño cuántico equivalente al 165% del ATQ de Seele a un solo enemigo. Seele gana un 25% de SPD durante 2 turno(s).</p>
             <video src=""></video>
             <h1 id="U">Ultimate</h1>
-            <p><b>Verse Vow ∞:</b>Invoca a Memosprite Demiurge, lo que provoca que gane inmediatamente 1 turno extra y activa el Ultimate de todos los compañeros de equipo. Luego, entra en el estado "Ondas de la Reverie Pasada", con el ATQ Básico mejorado a "Para Amar y Mañana ♪" y solo puede usar este ATQ Básico. Aumenta la Tasa CRIT de Cyrene y Demiurge en un 25% y despliega el efecto de Zona de la Habilidad sin límite de duración. Solo se puede usar una vez por batalla. El HP Máximo inicial de Demiurge es igual al 100% del HP Máximo de Cyrene.</p>
-            <p><b>Reunión a Primera Vista:</b> Hace que el Demiurgo gane inmediatamente 1 turno extra.</p>
+            <p><b>Tormenta de Mariposas:</b> Seele entra en el estado mejorado y causa DMG Cuántico igual al 340% de su ATQ a un solo enemigo.</p>
             <video src=""></video>
             <h1 id="P">Pasiva</h1>
-            <p><b>Corazones Unidos:</b> Cuando el combate comienza o después de que Cyrene actúa, otros personajes aliados bajo cualquier estado y sus memosprites ganan "Futuro". Cuando los aliados con "Futuro" actúan, consumen "Futuro" para otorgar a Cyrene 1 punto(s) de "Recuerdo". Cuando Cyrene tiene 24 puntos de "Recuerdo", puede activar su Ultimate y disipar todos los debuffs sobre ella. Cuando tiene 12 puntos de "Recuerdo" durante el estado "Ondas de la Reverie del Pasado", puede activar su Ultimate. Después de alcanzar el máximo, los puntos de "Recuerdo" pueden desbordarse hasta 27 puntos. Mientras Cyrene está en el campo, aumenta el daño infligido por todos los aliados en un 10.0%.</p>
+            <p><b>Resurgimiento:</b> Entra en el estado potenciado al derrotar a un enemigo con un ATQ Básico, Habilidad o Definitiva, y recibe un turno extra. Mientras está en el estado potenciado, el DAÑO de los ataques de Seele aumenta en un 60% durante 1 turno(s). Los enemigos derrotados en el turno extra proporcionado por Resurgimiento no activarán otro Resurgimiento.</p>
             <video src=""></video>
         </span>
     </div>
